# TabStride

./: .gitignore  AGENT_INSTALL.md  Cargo.toml  README.md  README.zh-CN.md  install.ps1  install.sh  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release-cli.yml  release-extension.yml
apps/extension/: PRIVACY.md  PRIVACY.zh-CN.md  package.json  tsconfig.json  vitest.config.ts  wxt.config.ts
apps/extension/src/: vitest-setup.ts
apps/extension/src/browser-driver/: chromium-cdp.ts
apps/extension/src/content/: BorrowConfirmationOverlay.tsx  ControlOverlay.tsx  HelpRequestOverlay.tsx  isolated-overlay-root.ts
apps/extension/src/entrypoints/: background.ts  content.ts
apps/extension/src/lib/: connection-controller.ts  help-bridge.ts  instance-id.ts  keepalive.ts  overlay-dom.ts  popup-bridge.ts  semver.ts
apps/extension/src/session-manager/: event-handler.ts  manager.ts
crates/tabstride-cli/: Cargo.toml  README.md  build.rs
crates/tabstride-cli/skill/: SKILL.md
crates/tabstride-cli/src/: agent_client.rs  ipc_client.rs  lib.rs  main.rs
crates/tabstride-cli/src/cli/: browser_wait.rs  browsers.rs  business_rpc.rs  client.rs  console.rs  daemon.rs  dialogs.rs  doctor.rs  ensure_daemon.rs  error.rs  evaluate.rs  flow.rs  get_html.rs  human_loop.rs  install_skill.rs  interaction.rs  logs.rs  mod.rs  navigate.rs  render_error.rs  screenshot.rs  session.rs  snapshot.rs  status.rs  tab.rs  update.rs  waits.rs
crates/tabstride-cli/src/daemon/: abort.rs  agent_ws.rs  browsers.rs  cancel_forward.rs  flow_runtime.rs  inflight.rs  info.rs  ipc.rs  lockfile.rs  mod.rs  paths.rs  queue.rs  sessions.rs  start.rs  state.rs  ws.rs
crates/tabstride-cli/src/skill_install/: mod.rs  sync.rs
crates/tabstride-cli/tests/: agent_ws.rs  auto_spawn.rs  browser_list_ordering.rs  browser_wait.rs  cancel_forwarding.rs  cli_parse.rs  detach_smoke.rs  exit_codes.rs  flow_runtime.rs  foreground_smoke.rs  handshake_compat.rs  idle_exit.rs  info_roundtrip.rs  install_skill.rs  ipc_client.rs  ipc_smoke.rs  lockfile.rs  logs_cmd.rs  per_session_queue.rs  session_user_interrupt.rs  sessions_ipc.rs  status_cmd.rs  tools_ipc.rs  tools_m7_ipc.rs  tools_m8_ipc.rs  tools_m9_ipc.rs  ws_handshake.rs
crates/tabstride-cli/tests/support/: mod.rs
crates/tabstride-protocol/: Cargo.toml  README.md
crates/tabstride-protocol/schema/: system_status_result.json  tool_session_start_params.json  tool_session_start_result.json
crates/tabstride-protocol/src/: error.rs  flow.rs  lib.rs  method.rs  system.rs
crates/tabstride-protocol/src/tools/: interaction.rs  session.rs
docs/performance/: README.md  baseline-2026-07-22.json  flow-baseline-2026-07-22.json
examples/flows/: benchmark-five-step.yaml  todomvc.yaml
scripts/: benchmark-runtime.py  render-version-json.mjs  render-version-json.test.mjs
skill/: SKILL.md
(+38 files in other folders)
